--- a/SSWEProject/SSWERenders/SSWERenders.vcxproj.filters
+++ b/SSWEProject/SSWERenders/SSWERenders.vcxproj.filters
@@ -48,9 +48,6 @@
     <ClCompile Include="Renders\XEffect\EffectHandler.cpp">
       <Filter>Renders\XEffect</Filter>
     </ClCompile>
-    <ClCompile Include="Renders\PostProcessor\ScreenSpaceAmbientOcclusion.cpp">
-      <Filter>Renders\PostProcessor</Filter>
-    </ClCompile>
     <ClCompile Include="Renders\DepthOfField\shadergroup.cpp">
       <Filter>Renders\DepthOfField</Filter>
     </ClCompile>
@@ -117,6 +114,12 @@
     <ClCompile Include="Renders\HDR\CAAPostProcessingManager.cpp">
       <Filter>Renders\HDR</Filter>
     </ClCompile>
+    <ClCompile Include="Renders\PostProcessor\CHDRManager.cpp">
+      <Filter>Renders\PostProcessor</Filter>
+    </ClCompile>
+    <ClCompile Include="Renders\PostProcessor\CScreenSpaceAmbientOcclusion.cpp">
+      <Filter>Renders\PostProcessor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SSWERenders.h">
@@ -148,12 +151,6 @@
     </ClInclude>
     <ClInclude Include="Renders\XEffect\XEffects.h">
       <Filter>Renders\XEffect</Filter>
-    </ClInclude>
-    <ClInclude Include="Renders\PostProcessor\PostProcessMotionBlurhlsl.h">
-      <Filter>Renders\PostProcessor</Filter>
-    </ClInclude>
-    <ClInclude Include="Renders\PostProcessor\ScreenSpaceAmbientOcclusion.h">
-      <Filter>Renders\PostProcessor</Filter>
     </ClInclude>
     <ClInclude Include="Renders\DepthOfField\shadergroup.h">
       <Filter>Renders\DepthOfField</Filter>
@@ -238,6 +235,15 @@
     </ClInclude>
     <ClInclude Include="Renders\HDR\CAAPostProcessingManager.h">
       <Filter>Renders\HDR</Filter>
+    </ClInclude>
+    <ClInclude Include="Renders\PostProcessor\CPostProcessMotionBlurhlsl.h">
+      <Filter>Renders\PostProcessor</Filter>
+    </ClInclude>
+    <ClInclude Include="Renders\PostProcessor\CHDRManager.h">
+      <Filter>Renders\PostProcessor</Filter>
+    </ClInclude>
+    <ClInclude Include="Renders\PostProcessor\CScreenSpaceAmbientOcclusion.h">
+      <Filter>Renders\PostProcessor</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
