--- a/SSWEProject/SSWERenders/SSWERenders/SSWERenders.cbp
+++ b/SSWEProject/SSWERenders/SSWERenders/SSWERenders.cbp
@@ -55,11 +55,55 @@
 		<Unit filename="../Renders/DepthOfField/shadergroup.h" />
 		<Unit filename="../Renders/DepthOfField/shadermaterial.cpp" />
 		<Unit filename="../Renders/DepthOfField/shadermaterial.h" />
+		<Unit filename="../Renders/HDR/CAAPostProcessingManager.cpp" />
+		<Unit filename="../Renders/HDR/CAAPostProcessingManager.h" />
+		<Unit filename="../Renders/HDR/CAmplifier.h" />
+		<Unit filename="../Renders/HDR/CBrightPassPostProcess.cpp" />
+		<Unit filename="../Renders/HDR/CBrightPassPostProcess.h" />
+		<Unit filename="../Renders/HDR/CContext.cpp" />
+		<Unit filename="../Renders/HDR/CDSBloomGenerator.cpp" />
+		<Unit filename="../Renders/HDR/CDSBloomGenerator.h" />
+		<Unit filename="../Renders/HDR/CDeviceContext.h" />
+		<Unit filename="../Renders/HDR/CDownSampleX4PostProcess.cpp" />
+		<Unit filename="../Renders/HDR/CDownSampleX4PostProcess.h" />
+		<Unit filename="../Renders/HDR/CErrorHandling.cpp" />
+		<Unit filename="../Renders/HDR/CErrorHandling.h" />
+		<Unit filename="../Renders/HDR/CGaussianBlurBase.cpp" />
+		<Unit filename="../Renders/HDR/CGaussianBlurBase.h" />
+		<Unit filename="../Renders/HDR/CGaussianBlurHPostProcess.cpp" />
+		<Unit filename="../Renders/HDR/CGaussianBlurHPostProcess.h" />
+		<Unit filename="../Renders/HDR/CGaussianBlurVPostProcess.cpp" />
+		<Unit filename="../Renders/HDR/CGaussianBlurVPostProcess.h" />
+		<Unit filename="../Renders/HDR/CGlobalContext.h" />
+		<Unit filename="../Renders/HDR/CHDRPostProcess.cpp" />
+		<Unit filename="../Renders/HDR/CHDRPostProcess.h" />
+		<Unit filename="../Renders/HDR/CHDRPostProcessingManager.cpp" />
+		<Unit filename="../Renders/HDR/CHDRPostProcessingManager.h" />
+		<Unit filename="../Renders/HDR/CHDRScreenQuad.h" />
+		<Unit filename="../Renders/HDR/CInvertPostProcess.cpp" />
+		<Unit filename="../Renders/HDR/CInvertPostProcess.h" />
+		<Unit filename="../Renders/HDR/CLDRBloomPostProcess.cpp" />
+		<Unit filename="../Renders/HDR/CLDRBloomPostProcess.h" />
+		<Unit filename="../Renders/HDR/CLuminanceGenerator.cpp" />
+		<Unit filename="../Renders/HDR/CLuminanceGenerator.h" />
+		<Unit filename="../Renders/HDR/CPaths.h" />
+		<Unit filename="../Renders/HDR/CPhongShaderManager.cpp" />
+		<Unit filename="../Renders/HDR/CPhongShaderManager.h" />
+		<Unit filename="../Renders/HDR/CPostProcessingManager.cpp" />
+		<Unit filename="../Renders/HDR/CPostProcessingManager.h" />
+		<Unit filename="../Renders/HDR/CResourceManager.cpp" />
+		<Unit filename="../Renders/HDR/CResourceManager.h" />
+		<Unit filename="../Renders/HDR/CTextureAdder.cpp" />
+		<Unit filename="../Renders/HDR/CTextureAdder.h" />
+		<Unit filename="../Renders/HDR/IPostProcess.h" />
+		<Unit filename="../Renders/HDR/IPostProcessHelper.h" />
 		<Unit filename="../Renders/Materials/CNormalMappingMaterial.cpp" />
 		<Unit filename="../Renders/Materials/CNormalMappingMaterial.h" />
-		<Unit filename="../Renders/PostProcessor/PostProcessMotionBlurhlsl.h" />
-		<Unit filename="../Renders/PostProcessor/ScreenSpaceAmbientOcclusion.cpp" />
-		<Unit filename="../Renders/PostProcessor/ScreenSpaceAmbientOcclusion.h" />
+		<Unit filename="../Renders/PostProcessor/CHDRManager.cpp" />
+		<Unit filename="../Renders/PostProcessor/CHDRManager.h" />
+		<Unit filename="../Renders/PostProcessor/CPostProcessMotionBlurhlsl.h" />
+		<Unit filename="../Renders/PostProcessor/CScreenSpaceAmbientOcclusion.cpp" />
+		<Unit filename="../Renders/PostProcessor/CScreenSpaceAmbientOcclusion.h" />
 		<Unit filename="../Renders/XEffect/CPSSMUtils.cpp" />
 		<Unit filename="../Renders/XEffect/CPSSMUtils.h" />
 		<Unit filename="../Renders/XEffect/CScreenQuad.h" />
