--- a/SSWEProject/SSWE/SSWE/SSWE.cbp
+++ b/SSWEProject/SSWE/SSWE/SSWE.cbp
@@ -12,7 +12,6 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option use_console_runner="0" />
 				<Compiler>
 					<Add option="-std=c++11" />
 					<Add option="-g" />
@@ -24,7 +23,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="../../../SSWE/SSWE" prefix_auto="1" extension_auto="1" />
+				<Option output="../../../SSWE/SSWEr" prefix_auto="1" extension_auto="1" />
 				<Option working_dir="../../../SSWE" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
