Fixed HDR Pipeline, creating example game, improved liquid bodies, improved exporter/importer
To Do:
	- Fix HDR Pipeline on OpenGL Driver

--- a/SSWEProject/ExampleGame/ExampleGame.vcxproj.filters
+++ b/SSWEProject/ExampleGame/ExampleGame.vcxproj.filters
@@ -24,6 +24,18 @@
     <ClInclude Include="targetver.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="COcclusionTest.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="CWeaponTest.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
+    <ClInclude Include="CDragonTest.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -32,5 +44,10 @@
     <ClCompile Include="ExampleGame.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="ExampleGame.rc">
+      <Filter>Fichiers de ressources</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
