--- a/SSWEProject/DemoGame/DemoGame.vcxproj
+++ b/SSWEProject/DemoGame/DemoGame.vcxproj
@@ -140,6 +140,8 @@
     <ClInclude Include="DemoGame\Example2\CExample2.h" />
     <ClInclude Include="DemoGame\Example3\CExample3.h" />
     <ClInclude Include="DemoGame\Example4\CExample4.h" />
+    <ClInclude Include="DemoGame\Example5\CExample5.h" />
+    <ClInclude Include="DemoGame\Example6\CExample6.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
@@ -150,6 +152,8 @@
     <ClCompile Include="DemoGame\Example2\CExample2.cpp" />
     <ClCompile Include="DemoGame\Example3\CExample3.cpp" />
     <ClCompile Include="DemoGame\Example4\CExample4.cpp" />
+    <ClCompile Include="DemoGame\Example5\CExample5.cpp" />
+    <ClCompile Include="DemoGame\Example6\CExample6.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
