--- a/SSWEProject/DemoGame/DemoGame.vcxproj.filters
+++ b/SSWEProject/DemoGame/DemoGame.vcxproj.filters
@@ -31,6 +31,12 @@
     <Filter Include="DemoGame\Example4">
       <UniqueIdentifier>{8e88e1d4-2a9c-451c-9987-fd7d17e985c0}</UniqueIdentifier>
     </Filter>
+    <Filter Include="DemoGame\Example5">
+      <UniqueIdentifier>{bc73130d-175c-4112-88ff-464b46951003}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="DemoGame\Example6">
+      <UniqueIdentifier>{0555c9cb-c1f7-44c5-8ad1-bef991c0ff4e}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -57,6 +63,12 @@
     <ClInclude Include="DemoGame\Example4\CExample4.h">
       <Filter>DemoGame\Example4</Filter>
     </ClInclude>
+    <ClInclude Include="DemoGame\Example5\CExample5.h">
+      <Filter>DemoGame\Example5</Filter>
+    </ClInclude>
+    <ClInclude Include="DemoGame\Example6\CExample6.h">
+      <Filter>DemoGame\Example6</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -79,6 +91,12 @@
     </ClCompile>
     <ClCompile Include="DemoGame\Example4\CExample4.cpp">
       <Filter>DemoGame\Example4</Filter>
+    </ClCompile>
+    <ClCompile Include="DemoGame\Example5\CExample5.cpp">
+      <Filter>DemoGame\Example5</Filter>
+    </ClCompile>
+    <ClCompile Include="DemoGame\Example6\CExample6.cpp">
+      <Filter>DemoGame\Example6</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
