--- a/SSWEProject/ExampleGame/ExampleGame.vcxproj.filters
+++ b/SSWEProject/ExampleGame/ExampleGame.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="CDragonTest.h">
       <Filter>Fichiers sources</Filter>
     </ClInclude>
+    <ClInclude Include="CFactoryTest.h">
+      <Filter>Fichiers sources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
