--- a/SSWEProject/irrBullet/source/visualstudios/2010/irrBullet.vcxproj
+++ b/SSWEProject/irrBullet/source/visualstudios/2010/irrBullet.vcxproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="12.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -24,6 +24,7 @@
     <ClCompile Include="..\..\gimpactmeshshape.cpp" />
     <ClCompile Include="..\..\irrbullet.cpp" />
     <ClCompile Include="..\..\irrbulletcommon.cpp" />
+    <ClCompile Include="..\..\kinematiccharactercontroller.cpp" />
     <ClCompile Include="..\..\liquidbody.cpp" />
     <ClCompile Include="..\..\motionstate.cpp" />
     <ClCompile Include="..\..\physicsdebug.cpp" />
@@ -48,6 +49,7 @@
     <ClInclude Include="..\..\irrbullet.h" />
     <ClInclude Include="..\..\irrbulletcommon.h" />
     <ClInclude Include="..\..\irrbullet_compile_config.h" />
+    <ClInclude Include="..\..\kinematiccharactercontroller.h" />
     <ClInclude Include="..\..\liquidbody.h" />
     <ClInclude Include="..\..\motionstate.h" />
     <ClInclude Include="..\..\physicsdebug.h" />
